changed travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ after_success:
   - docker build -t dice/multi-nginx ./nginx
   - docker build -t dice/multi-server ./server
   - docker build -t dice/multi-worker ./worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push dice/multi-client
+  - docker push dice/multi-nginx
+  - docker push dice/multi-server
+  - docker push dice/multi-worker
