--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: generic
 sudo:required
 services:
   - docker
@@ -7,7 +6,7 @@ before_install:
   - docker build -t dice/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true dice/react-test npm test
 
 after_success:
   - docker build -t dice/multi-client ./client
