--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ after_success:
   - docker build -t dice/multi-server ./server
   - docker build -t dice/multi-worker ./worker
   # Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin docker.io
   # Take those images and push them to docker hub
-  - docker push dice/multi-client
-  - docker push dice/multi-nginx
-  - docker push dice/multi-server
-  - docker push dice/multi-worker
+  - docker push 040130102/multi-client
+  - docker push 040130102/multi-nginx
+  - docker push 040130102/multi-server
+  - docker push 040130102/multi-worker
